Fixes, cleanup and more tests